# maybevoid.com

./: .gitignore  404.md  Makefile  about.rst  contact.md  default.nix  index.html  maybevoid.cabal  project.nix  shell.nix  site.hs
css/: default.css  syntax.css
generator/: Makefile  maybevoid.cabal
generator/src/: Main.hs
pages/: about.md  soareschen.md
posts/: 2019-01-24-hello-world.md  2019-01-27-getting-started-haskell-nix.md  2019-01-27-hello-world.md
projects/2019-01-27-getting-started-haskell-nix/: Makefile  README.md  haskell-nix-demo.cabal
projects/2019-01-27-getting-started-haskell-nix/src/lib/: Demo.hs
projects/2019-01-27-getting-started-haskell-nix/src/main/: Main.hs
projects/2019-02-13-servant-demo/: .gitignore  Makefile  README.md  default.nix  package.yaml  servant-demo.cabal  shell.nix
projects/2019-02-13-servant-demo/src/lib/Acme/: App.hs  Effect.hs  Handler.hs  Model.hs  Route.hs  Server.hs
projects/2019-02-13-servant-demo/src/lib/Acme/Effect/: Abstract.hs  Concrete.hs
projects/2019-02-13-servant-demo/src/lib/MyApp/: App.hs  Effect.hs  Handler.hs  Model.hs  Route.hs  Server.hs
projects/2019-02-13-servant-demo/src/lib/MyApp/Effect/: Abstract.hs  Concrete.hs
projects/2019-02-13-servant-demo/src/main/: Main.hs
projects/2019-02-13-servant-demo/src/test/: Main.hs
projects/2019-02-13-servant-demo/src/test/AcmeTest/: Main.hs  TestCase.hs
projects/2019-02-13-servant-demo/src/test/AcmeTest/Abstract/: Counter.hs
projects/2019-02-13-servant-demo/src/test/AcmeTest/Impl/: Counter.hs
projects/2019-02-13-servant-demo/src/test/AcmeTest/Impl/Counter/: STMEff.hs  StateEff.hs  StateT.hs
projects/2019-02-13-servant-demo/src/test/AcmeTest/TestCase/: Prop.hs  Race.hs  Unit.hs
projects/2019-02-13-servant-demo/src/test/AcmeTest/Util/: Effect.hs
site/: 404.md  index.html
site/css/: default.css
site/drafts/: implicit-effects.md
site/pages/: about.md  soareschen.md  wiki.md
site/templates/: default.html
site/wiki/: haskell-reference.md  haskell.md  programming-language-theory.md
src/: Main.hs  Site.hs
templates/: default.html
wiki/: haskell-reference.md
