cabal-version:      2.4

name:               maybevoid
version:            0.1.0.0
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE
homepage:           https://maybevoid.com
author:             Soares Chen
maintainer:         soares.chen@maybevoid.com

executable generate-site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
  ghc-options:      -threaded
  default-language: Haskell2010
