cabal-version:       2.4

name:                haskell-nix-demo
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Soares Chen
maintainer:          soares.chen@maybevoid.com

library
  build-depends:       base ^>=4.12.0.0
                     , lens == 4.*
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  exposed-modules:     Demo

executable haskell-nix-demo
  main-is:          Main.hs
  hs-source-dirs:   src/main
  build-depends:    base == 4.*
                  , haskell-nix-demo
  default-language: Haskell2010
