cabal-version:       2.4

name:                servant-demo
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Soares Chen
maintainer:          soares.chen@maybevoid.com

library
  build-depends:       base ^>=4.12.0.0
                     , base-compat
                     , servant == 0.15.*
                     , servant-server
                     , wai
                     , text
                     , aeson
                     , free
                     , stm
                     , mtl
                     , transformers
  ghc-options:         -Wall -threaded
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  exposed-modules:
                       MyApp.App
                     , MyApp.Effect
                     , MyApp.Handler
                     , MyApp.Model
                     , MyApp.Route
                     , MyApp.Server
                     , MyApp.Effect.Abstract
                     , MyApp.Effect.Concrete

executable servant-demo
  main-is:          Main.hs
  hs-source-dirs:   src/main
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
  build-depends:    base == 4.*
                  , servant-demo
                  , warp
                  , stm

test-suite servant-demo-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   src/test
  ghc-options:      -Wall -threaded
  build-depends:    base == 4.*
                  , servant-demo
                  , mtl
                  , stm
                  , transformers
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck