cabal-version:       2.4

name:                servant-demo
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Soares Chen
maintainer:          soares.chen@maybevoid.com

library
  build-depends:       base ^>=4.12.0.0
                     , base-compat
                     , servant == 0.15.*
                     , servant-server
                     , wai
                     , text
                     , aeson
                     , free
                     , stm
                     , mtl
                     , transformers
  ghc-options:         -Wall -O2
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  exposed-modules:     Acme.App
                     , Acme.Effect
                     , Acme.Handler
                     , Acme.Model
                     , Acme.Route
                     , Acme.Server
                     , Acme.Effect.Abstract
                     , Acme.Effect.Concrete

executable demo-server
  main-is:          Main.hs
  hs-source-dirs:   src/main
  ghc-options:      -Wall -O2 -threaded
  default-language: Haskell2010
  build-depends:    base == 4.*
                  , servant-demo
                  , warp
                  , stm

test-suite servant-demo-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   src/test
  ghc-options:      -Wall -O2 -threaded
  default-language: Haskell2010
  build-depends:    base == 4.*
                  , servant-demo
                  , mtl
                  , stm
                  , free
                  , async
                  , transformers
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck
                  , QuickCheck
  other-modules:    AcmeTest.Main
                  , AcmeTest.Abstract.Counter
                  , AcmeTest.Impl.Counter
                  , AcmeTest.Impl.Counter.STMEff
                  , AcmeTest.Impl.Counter.StateEff
                  , AcmeTest.Impl.Counter.StateT
                  , AcmeTest.TestCase
                  , AcmeTest.TestCase.Prop
                  , AcmeTest.TestCase.Unit
                  , AcmeTest.TestCase.Race
                  , AcmeTest.Util.Effect